// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#dddddd",
      "height": 2,
      "width": "100%",
    }
  }
  testID="divider"
/>
`;

exports[`<Divider /> renders correctly with subtle prominence 1`] = `
<View
  style={
    {
      "backgroundColor": "#dddddd",
      "height": 1,
      "width": "100%",
    }
  }
  testID="divider"
/>
`;
